# rasputin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  HANDOVER.md  STRESS_TESTS.md  TEST_SCENARIOS.md  check_host.mjs  check_tools.exp  ecosystem.config.cjs  eslint.config.js  find_rudyak_comprehensive.cjs  fix-lint.sh  fix-lint2.sh  fix-lint3.sh  fix-lint4.sh  manus-stress-tests.md  opencode.json  package.json  pnpm-lock.yaml  rasputin_technical_audit.md  ssh_explore.exp  stress-tests.md  todo.md  vitest.config.ts
.opencode/: opencode.json
.sisyphus/: boulder.json
OpenManus/: hosting_server.py
alfie/: ALFIE_PUBLIC_URLS.md  ALFIE_vs_MANUS.md  CTO_BRIEFING.md  CTO_QUICK_START.md  README.md
client/: index.html
daemon/: Cargo.toml  build.rs
daemon/proto/: daemon.proto
daemon/src/: auth.rs  config.rs  http.rs  main.rs  service.rs
daemon/src/controllers/: file.rs  input.rs  mod.rs  process.rs  screen.rs  window.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml  models.json  setup-rasputin-server.sh
docs/: JARVIS_V3_COMPLETE.md  JARVIS_V3_FULL.md  JARVIS_V3_SPEC.md  JARVIS_V3_WEBSITE.md  RASPUTIN_SELF_EVOLVING_ARCHITECTURE.md  SSH_ARCHITECTURE_CONSENSUS_FINAL.md  SSH_REMOTE_EXECUTION_ARCHITECTURE.md
drizzle/: 0001_windy_slayback.sql  0003_burly_starfox.sql  0003_parched_magik.sql  0004_dazzling_the_renegades.sql  0004_red_night_thrasher.sql  0005_public_lady_mastermind.sql  0005_small_agent_brand.sql  0006_gorgeous_rawhide_kid.sql  0007_curved_magdalene.sql  0008_married_shard.sql  0009_light_saracen.sql  0010_fearless_jackpot.sql  0012_eminent_stryfe.sql  0013_dusty_the_fury.sql  0014_lazy_nomad.sql  0015_good_scalphunter.sql  0016_dusty_mephisto.sql  0017_bright_chamber.sql  schema.ts
model-server/: main.py  (+2 more)
(+530 files in other folders)
