[package]
name = "jarvis-daemon"
version = "0.1.0"
edition = "2021"
description = "JARVIS Desktop Daemon - Full OS control for autonomous AI"
license = "MIT"
authors = ["RASPUTIN Team"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = "0.25"
jsonwebtoken = "9.3"
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }
wayland-client = { version = "0.31", optional = true }
input-linux = { version = "0.6", optional = true }
atspi = { version = "0.22", optional = true }
chromiumoxide = { version = "0.7", optional = true }
futures = "0.3"
async-trait = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
linux = ["x11rb", "input-linux", "atspi"]
wayland = ["wayland-client"]
browser = ["chromiumoxide"]
windows = ["dep:windows"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }

[[bin]]
name = "jarvis-daemon"
path = "src/main.rs"
